# graceful-wm

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  assignments.c  assignments.h  cmd.c  cmd.h  command-line.c  command-line.h  config.c  config.h  container.c  container.h  cursor.c  cursor.h  dpi.c  dpi.h  drag.c  drag.h  draw-util.c  draw-util.h  extend-wm-hints.c  extend-wm-hints.h  floating.c  floating.h  font.c  font.h  gaps.c  gaps.h  handlers.c  handlers.h  key-bindings.c  key-bindings.h  main.c  manage.c  manage.h  match.c  match.h  move.c  move.h  output.c  output.h  (+34 more)
common/: common.cmake
example/: CMakeLists.txt  tiny-wm-x.c
